Write the structure with HTML

--- a/index.html
+++ b/index.html
@@ -8,67 +8,155 @@
   
   <title>Frontend Mentor | Product list with cart</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 
-  Desserts
+  <div class="menu">
+    <h1>Desserts</h1>
+    <div class="cards-container">
+      <div class="card">
+        <picture>
+          <source srcset="assets/images/image-waffle-desktop.jpg" media="(min-width: 950px)">
+          <source srcset="assets/images/image-waffle-tablet.jpg" media="min-width: 768px">
+          <img src="assets/images/image-waffle-mobile.jpg" alt="">
+        </picture>
+        <button>
+          <img src="assets/images/icon-add-to-cart.svg" alt="">
+          Add to Cart
+        </button>
+        <p class="plate-description">Waffle</p>
+        <p class="plate-name">Waffle with Berries</p>
+        <p class="plate-price">$6.50</p>
+      </div>
 
-  Waffle with Berries
-  Waffle
-  6.50
-  Add to Cart
+      <div class="card">
+        <picture>
+          <source srcset="assets/images/image-creme-brulee-desktop.jpg" media="(min-width: 950px)">
+          <source srcset="assets/images/image-creme-brulee-tablet.jpg" media="min-width: 768px">
+          <img src="assets/images/image-creme-brulee-mobile.jpg" alt="">
+        </picture>
+        <button>
+          <img src="assets/images/icon-add-to-cart.svg" alt="">
+          Add to Cart
+        </button>
+        <p class="plate-description">Crème Brûlée</p>
+        <p class="plate-name">Vanilla Bean Crème Brûlée</p>
+        <p class="plate-price">$7.00</p>
+      </div>
 
-  Vanilla Bean Crème Brûlée
-  Crème Brûlée
-  7.00
-  Add to Cart
+      <div class="card">
+        <picture>
+          <source srcset="assets/images/image-macaron-desktop.jpg" media="(min-width: 950px)">
+          <source srcset="assets/images/image-macaron-tablet.jpg" media="min-width: 768px">
+          <img src="assets/images/image-macaron-mobile.jpg" alt="">
+        </picture>
+        <button>
+          <img src="assets/images/icon-add-to-cart.svg" alt="">
+          Add to Cart
+        </button>
+        <p class="plate-description">Macaron</p>
+        <p class="plate-name">Macaron Mix of Five</p>
+        <p class="plate-price">$8.00</p>
+      </div>
 
-  Macaron Mix of Five
-  Macaron
-  8.00
-  Add to Cart
+      <div class="card">
+        <picture>
+          <source srcset="assets/images/image-tiramisu-desktop.jpg" media="(min-width: 950px)">
+          <source srcset="assets/images/image-tiramisu-tablet.jpg" media="min-width: 768px">
+          <img src="assets/images/image-tiramisu-mobile.jpg" alt="">
+        </picture>
+        <button>
+          <img src="assets/images/icon-add-to-cart.svg" alt="">
+          Add to Cart
+        </button>
+        <p class="plate-description">Tiramisu</p>
+        <p class="plate-name">Classic Tiramisu</p>
+        <p class="plate-price">$5.50</p>
+      </div>
 
-  Classic Tiramisu
-  Tiramisu
-  5.50
-  Add to Cart
+      <div class="card">
+        <picture>
+          <source srcset="assets/images/image-baklava-desktop.jpg" media="(min-width: 950px)">
+          <source srcset="assets/images/image-baklava-tablet.jpg" media="min-width: 768px">
+          <img src="assets/images/image-baklava-mobile.jpg" alt="">
+        </picture>
+        <button>
+          <img src="assets/images/icon-add-to-cart.svg" alt="">
+          Add to Cart
+        </button>
+        <p class="plate-description">Baklava</p>
+        <p class="plate-name">Pistachio Baklava/p>
+        <p class="plate-price">$4.00</p>
+      </div>
 
-  Pistachio Baklava
-  Baklava
-  4.00
-  Add to Cart
+      <div class="card">
+        <picture>
+          <source srcset="assets/images/image-meringue-desktop.jpg" media="(min-width: 950px)">
+          <source srcset="assets/images/image-meringue-tablet.jpg" media="min-width: 768px">
+          <img src="assets/images/image-meringue-mobile.jpg" alt="">
+        </picture>
+        <button>
+          <img src="assets/images/icon-add-to-cart.svg" alt="">
+          Add to Cart
+        </button>
+        <p class="plate-description">Pie</p>
+        <p class="plate-name">Lemon Meringue Pie</p>
+        <p class="plate-price">$5.00</p>
+      </div>
 
-  Lemon Meringue Pie
-  Pie
-  5.00
-  Add to Cart
+      <div class="card">
+        <picture>
+          <source srcset="assets/images/image-cake-desktop.jpg" media="(min-width: 950px)">
+          <source srcset="assets/images/image-cake-tablet.jpg" media="min-width: 768px">
+          <img src="assets/images/image-cake-mobile.jpg" alt="">
+        </picture>
+        <button>
+          <img src="assets/images/icon-add-to-cart.svg" alt="">
+          Add to Cart
+        </button>
+        <p class="plate-description">Cake</p>
+        <p class="plate-name">Red Velvet Cake</p>
+        <p class="plate-price">$4.50</p>
+      </div>
 
-  Red Velvet Cake
-  Cake
-  4.50
-  Add to Cart
+      <div class="card">
+        <picture>
+          <source srcset="assets/images/image-brownie-desktop.jpg" media="(min-width: 950px)">
+          <source srcset="assets/images/image-brownie-tablet.jpg" media="min-width: 768px">
+          <img src="assets/images/image-brownie-mobile.jpg" alt="">
+        </picture>
+        <button>
+          <img src="assets/images/icon-add-to-cart.svg" alt="">
+          Add to Cart
+        </button>
+        <p class="plate-description">Brownie</p>
+        <p class="plate-name">Salted Caramel Brownie</p>
+        <p class="plate-price">$4.50</p>
+      </div>
 
-  Salted Caramel Brownie
-  Brownie
-  4.50
-  Add to Cart
+      <div class="card">
+        <picture>
+          <source srcset="assets/images/image-macaron-desktop.jpg" media="(min-width: 950px)">
+          <source srcset="assets/images/image-macaron-tablet.jpg" media="min-width: 768px">
+          <img src="assets/images/image-macaron-mobile.jpg" alt="">
+        </picture>
+        <button>
+          <img src="assets/images/icon-add-to-cart.svg" alt="">
+          Add to Cart
+        </button>
+        <p class="plate-description">Panna Cotta</p>
+        <p class="plate-name">Vanilla Panna Cotta</p>
+        <p class="plate-price">$6.50</p>
+      </div>
 
-  Vanilla Panna Cotta
-  Panna Cotta
-  6.50
-  Add to Cart
-
-  Your Cart (<!-- Quantity -->)
-  Your added items will appear here
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    </div>
   </div>
+
+  <div class="your-cart">
+    <p>Your Cart (<span class="quantity">0</span>)</p>
+    <img src="assets/images/illustration-empty-cart.svg" alt="">
+    <p>Your added items will appear here</p>
+  </div>  
+
 </body>
 </html>
