--- a/index.html
+++ b/index.html
@@ -12,154 +12,166 @@
   
   <title>Frontend Mentor | Product list with cart</title>
 
+  <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
 
-  <div class="menu">
-    <h1>Desserts</h1>
-    <div class="cards-container">
-      <div class="card">
-        <picture>
-          <source srcset="assets/images/image-waffle-desktop.jpg" media="(min-width: 950px)">
-          <source srcset="assets/images/image-waffle-tablet.jpg" media="min-width: 768px">
-          <img src="assets/images/image-waffle-mobile.jpg" alt="">
-        </picture>
-        <button>
-          <img src="assets/images/icon-add-to-cart.svg" alt="">
-          Add to Cart
-        </button>
-        <p class="plate-description">Waffle</p>
-        <p class="plate-name">Waffle with Berries</p>
-        <p class="plate-price">$6.50</p>
+  <div class="container">
+    <div class="menu">
+      <h1>Desserts</h1>
+      <div class="cards-container">
+        <div class="card">
+          <picture>
+            <source srcset="assets/images/image-waffle-desktop.jpg" media="(min-width: 950px)">
+            <source srcset="assets/images/image-waffle-tablet.jpg" media="(min-width: 768px)">
+            <img src="assets/images/image-waffle-mobile.jpg" alt="">
+          </picture>
+          <div class="btn-container">
+            <button class="add-to-cart-btn">
+              <img src="assets/images/icon-add-to-cart.svg" alt="">
+              Add to Cart
+            </button>
+          </div>
+          <p class="plate-description">Waffle</p>
+          <p class="plate-name">Waffle with Berries</p>
+          <p class="plate-price">$6.50</p>
+        </div>
+        <div class="card">
+          <picture>
+            <source srcset="assets/images/image-creme-brulee-desktop.jpg" media="(min-width: 950px)">
+            <source srcset="assets/images/image-creme-brulee-tablet.jpg" media="(min-width: 768px)">
+            <img src="assets/images/image-creme-brulee-mobile.jpg" alt="">
+          </picture>
+          <div class="btn-container">
+            <button class="add-to-cart-btn">
+              <img src="assets/images/icon-add-to-cart.svg" alt="">
+              Add to Cart
+            </button>
+          </div>
+          <p class="plate-description">Crème Brûlée</p>
+          <p class="plate-name">Vanilla Bean Crème Brûlée</p>
+          <p class="plate-price">$7.00</p>
+        </div>
+        <div class="card">
+          <picture>
+            <source srcset="assets/images/image-macaron-desktop.jpg" media="(min-width: 950px)">
+            <source srcset="assets/images/image-macaron-tablet.jpg" media="(min-width: 768px)">
+            <img src="assets/images/image-macaron-mobile.jpg" alt="">
+          </picture>
+          <div class="btn-container">
+            <button class="add-to-cart-btn">
+              <img src="assets/images/icon-add-to-cart.svg" alt="">
+              Add to Cart
+            </button>
+          </div>
+          <p class="plate-description">Macaron</p>
+          <p class="plate-name">Macaron Mix of Five</p>
+          <p class="plate-price">$8.00</p>
+        </div>
+        <div class="card">
+          <picture>
+            <source srcset="assets/images/image-tiramisu-desktop.jpg" media="(min-width: 950px)">
+            <source srcset="assets/images/image-tiramisu-tablet.jpg" media="(min-width: 768px)">
+            <img src="assets/images/image-tiramisu-mobile.jpg" alt="">
+          </picture>
+          <div class="btn-container">
+            <button class="add-to-cart-btn">
+              <img src="assets/images/icon-add-to-cart.svg" alt="">
+              Add to Cart
+            </button>
+          </div>
+          <p class="plate-description">Tiramisu</p>
+          <p class="plate-name">Classic Tiramisu</p>
+          <p class="plate-price">$5.50</p>
+        </div>
+        <div class="card">
+          <picture>
+            <source srcset="assets/images/image-baklava-desktop.jpg" media="(min-width: 950px)">
+            <source srcset="assets/images/image-baklava-tablet.jpg" media="(min-width: 768px)">
+            <img src="assets/images/image-baklava-mobile.jpg" alt="">
+          </picture>
+          <div class="btn-container">
+            <button class="add-to-cart-btn">
+              <img src="assets/images/icon-add-to-cart.svg" alt="">
+              Add to Cart
+            </button>
+          </div>
+          <p class="plate-description">Baklava</p>
+          <p class="plate-name">Pistachio Baklava/p>
+          <p class="plate-price">$4.00</p>
+        </div>
+        <div class="card">
+          <picture>
+            <source srcset="assets/images/image-meringue-desktop.jpg" media="(min-width: 950px)">
+            <source srcset="assets/images/image-meringue-tablet.jpg" media="(min-width: 768px)">
+            <img src="assets/images/image-meringue-mobile.jpg" alt="">
+          </picture>
+          <div class="btn-container">
+            <button class="add-to-cart-btn">
+              <img src="assets/images/icon-add-to-cart.svg" alt="">
+              Add to Cart
+            </button>
+          </div>
+          <p class="plate-description">Pie</p>
+          <p class="plate-name">Lemon Meringue Pie</p>
+          <p class="plate-price">$5.00</p>
+        </div>
+        <div class="card">
+          <picture>
+            <source srcset="assets/images/image-cake-desktop.jpg" media="(min-width: 950px)">
+            <source srcset="assets/images/image-cake-tablet.jpg" media="(min-width: 768px)">
+            <img src="assets/images/image-cake-mobile.jpg" alt="">
+          </picture>
+          <div class="btn-container">
+            <button class="add-to-cart-btn">
+              <img src="assets/images/icon-add-to-cart.svg" alt="">
+              Add to Cart
+            </button>
+          </div>
+          <p class="plate-description">Cake</p>
+          <p class="plate-name">Red Velvet Cake</p>
+          <p class="plate-price">$4.50</p>
+        </div>
+        <div class="card">
+          <picture>
+            <source srcset="assets/images/image-brownie-desktop.jpg" media="(min-width: 950px)">
+            <source srcset="assets/images/image-brownie-tablet.jpg" media="(min-width: 768px)">
+            <img src="assets/images/image-brownie-mobile.jpg" alt="">
+          </picture>
+          <div class="btn-container">
+            <button class="add-to-cart-btn">
+              <img src="assets/images/icon-add-to-cart.svg" alt="">
+              Add to Cart
+            </button>
+          </div>
+          <p class="plate-description">Brownie</p>
+          <p class="plate-name">Salted Caramel Brownie</p>
+          <p class="plate-price">$4.50</p>
+        </div>
+        <div class="card">
+          <picture>
+            <source srcset="assets/images/image-panna-cotta-desktop.jpg" media="(min-width: 950px)">
+            <source srcset="assets/images/image-panna-cotta-tablet.jpg" media="(min-width: 768px)">
+            <img src="assets/images/image-panna-cotta-mobile.jpg" alt="">
+          </picture class="add-to-cart-btn">
+          <div class="btn-container">
+            <button class="add-to-cart-btn">
+              <img src="assets/images/icon-add-to-cart.svg" alt="">
+              Add to Cart
+            </button>
+          </div>
+          <p class="plate-description">Panna Cotta</p>
+          <p class="plate-name">Vanilla Panna Cotta</p>
+          <p class="plate-price">$6.50</p>
+        </div>
       </div>
-
-      <div class="card">
-        <picture>
-          <source srcset="assets/images/image-creme-brulee-desktop.jpg" media="(min-width: 950px)">
-          <source srcset="assets/images/image-creme-brulee-tablet.jpg" media="min-width: 768px">
-          <img src="assets/images/image-creme-brulee-mobile.jpg" alt="">
-        </picture>
-        <button>
-          <img src="assets/images/icon-add-to-cart.svg" alt="">
-          Add to Cart
-        </button>
-        <p class="plate-description">Crème Brûlée</p>
-        <p class="plate-name">Vanilla Bean Crème Brûlée</p>
-        <p class="plate-price">$7.00</p>
-      </div>
-
-      <div class="card">
-        <picture>
-          <source srcset="assets/images/image-macaron-desktop.jpg" media="(min-width: 950px)">
-          <source srcset="assets/images/image-macaron-tablet.jpg" media="min-width: 768px">
-          <img src="assets/images/image-macaron-mobile.jpg" alt="">
-        </picture>
-        <button>
-          <img src="assets/images/icon-add-to-cart.svg" alt="">
-          Add to Cart
-        </button>
-        <p class="plate-description">Macaron</p>
-        <p class="plate-name">Macaron Mix of Five</p>
-        <p class="plate-price">$8.00</p>
-      </div>
-
-      <div class="card">
-        <picture>
-          <source srcset="assets/images/image-tiramisu-desktop.jpg" media="(min-width: 950px)">
-          <source srcset="assets/images/image-tiramisu-tablet.jpg" media="min-width: 768px">
-          <img src="assets/images/image-tiramisu-mobile.jpg" alt="">
-        </picture>
-        <button>
-          <img src="assets/images/icon-add-to-cart.svg" alt="">
-          Add to Cart
-        </button>
-        <p class="plate-description">Tiramisu</p>
-        <p class="plate-name">Classic Tiramisu</p>
-        <p class="plate-price">$5.50</p>
-      </div>
-
-      <div class="card">
-        <picture>
-          <source srcset="assets/images/image-baklava-desktop.jpg" media="(min-width: 950px)">
-          <source srcset="assets/images/image-baklava-tablet.jpg" media="min-width: 768px">
-          <img src="assets/images/image-baklava-mobile.jpg" alt="">
-        </picture>
-        <button>
-          <img src="assets/images/icon-add-to-cart.svg" alt="">
-          Add to Cart
-        </button>
-        <p class="plate-description">Baklava</p>
-        <p class="plate-name">Pistachio Baklava/p>
-        <p class="plate-price">$4.00</p>
-      </div>
-
-      <div class="card">
-        <picture>
-          <source srcset="assets/images/image-meringue-desktop.jpg" media="(min-width: 950px)">
-          <source srcset="assets/images/image-meringue-tablet.jpg" media="min-width: 768px">
-          <img src="assets/images/image-meringue-mobile.jpg" alt="">
-        </picture>
-        <button>
-          <img src="assets/images/icon-add-to-cart.svg" alt="">
-          Add to Cart
-        </button>
-        <p class="plate-description">Pie</p>
-        <p class="plate-name">Lemon Meringue Pie</p>
-        <p class="plate-price">$5.00</p>
-      </div>
-
-      <div class="card">
-        <picture>
-          <source srcset="assets/images/image-cake-desktop.jpg" media="(min-width: 950px)">
-          <source srcset="assets/images/image-cake-tablet.jpg" media="min-width: 768px">
-          <img src="assets/images/image-cake-mobile.jpg" alt="">
-        </picture>
-        <button>
-          <img src="assets/images/icon-add-to-cart.svg" alt="">
-          Add to Cart
-        </button>
-        <p class="plate-description">Cake</p>
-        <p class="plate-name">Red Velvet Cake</p>
-        <p class="plate-price">$4.50</p>
-      </div>
-
-      <div class="card">
-        <picture>
-          <source srcset="assets/images/image-brownie-desktop.jpg" media="(min-width: 950px)">
-          <source srcset="assets/images/image-brownie-tablet.jpg" media="min-width: 768px">
-          <img src="assets/images/image-brownie-mobile.jpg" alt="">
-        </picture>
-        <button>
-          <img src="assets/images/icon-add-to-cart.svg" alt="">
-          Add to Cart
-        </button>
-        <p class="plate-description">Brownie</p>
-        <p class="plate-name">Salted Caramel Brownie</p>
-        <p class="plate-price">$4.50</p>
-      </div>
-
-      <div class="card">
-        <picture>
-          <source srcset="assets/images/image-macaron-desktop.jpg" media="(min-width: 950px)">
-          <source srcset="assets/images/image-macaron-tablet.jpg" media="min-width: 768px">
-          <img src="assets/images/image-macaron-mobile.jpg" alt="">
-        </picture>
-        <button>
-          <img src="assets/images/icon-add-to-cart.svg" alt="">
-          Add to Cart
-        </button>
-        <p class="plate-description">Panna Cotta</p>
-        <p class="plate-name">Vanilla Panna Cotta</p>
-        <p class="plate-price">$6.50</p>
-      </div>
-
     </div>
-  </div>
-
-  <div class="your-cart">
-    <p>Your Cart (<span class="quantity">0</span>)</p>
-    <img src="assets/images/illustration-empty-cart.svg" alt="">
-    <p>Your added items will appear here</p>
+    <div class="your-cart">
+      <p>Your Cart (<span class="quantity">0</span>)</p>
+      <img src="assets/images/illustration-empty-cart.svg" alt="">
+      <p>Your added items will appear here</p>
+    </div>
   </div>  
 
 </body>
