Write the structure of the order confirmation card with HTML

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 
-  <div class="container">
+  <div class="container" style="display: none;">
     <div class="menu">
       <h1>Desserts</h1>
       <div class="cards-container">
@@ -98,7 +98,7 @@
             </button>
           </div>
           <p class="plate-description">Baklava</p>
-          <p class="plate-name">Pistachio Baklava/p>
+          <p class="plate-name">Pistachio Baklava</p>
           <p class="plate-price">$4.00</p>
         </div>
         <div class="card">
@@ -172,7 +172,155 @@
       <img src="assets/images/illustration-empty-cart.svg" alt="">
       <p>Your added items will appear here</p>
     </div>
-  </div>  
+  </div> 
+
+
+  <!-- ********* Order confirmation message ******** -->
+
+  <div class="confirmation">
+    <div class="wrapper">
+      <img class="confirmation-img" src="assets/images/icon-order-confirmed.svg" alt="">
+      <h1>Order<br> Confirmed</h1>
+      <p>We hope you enjoy your food!</p>
+
+      <ul class="bill">
+
+        <li>
+          <div>
+            <img src="assets/images/image-waffle-thumbnail.jpg" alt="">
+            <div>
+              <p>Waffle With Berries</p>
+              <div>
+                <span>1x</span>
+                <span>@ $6.50</span>
+              </div>
+            </div>
+          </div>
+          <p>$6.50</p>
+        </li>
+
+        <li>
+          <div>
+            <img src="assets/images/image-creme-brulee-thumbnail.jpg" alt="">
+            <div>
+              <p>Vanilla Bean Crème Brûlée</p>
+              <div>
+                <span>1x</span>
+                <span>@ $7.00</span>
+              </div>
+            </div>
+          </div>
+          <p>$7.00</p>
+        </li>
+
+        <li>
+          <div>
+            <img src="assets/images/image-macaron-thumbnail.jpg" alt="">
+            <div>
+              <p>Macaron Mix of Five</p>
+              <div>
+                <span>1x</span>
+                <span>@ $8.00</span>
+              </div>
+            </div>
+          </div>
+          <p>$8.00</p>
+        </li>
+
+        <li>
+          <div>
+            <img src="assets/images/image-tiramisu-thumbnail.jpg" alt="">
+            <div>
+              <p>Classic Tiramisu</p>
+              <div>
+                <span>1x</span>
+                <span>@ $5.50</span>
+              </div>
+            </div>
+          </div>
+          <p>$5.50</p>
+        </li>
+
+        <li>
+          <div>
+            <img src="assets/images/image-baklava-thumbnail.jpg" alt="">
+            <div>
+              <p>Pistachio Baklava</p>
+              <div>
+                <span>1x</span>
+                <span>@ $4.00</span>
+              </div>
+            </div>
+          </div>
+          <p>$4.00</p>
+        </li>
+
+        <li>
+          <div>
+            <img src="assets/images/image-meringue-thumbnail.jpg" alt="">
+            <div>
+              <p>Lemon Meringue Pie</p>
+              <div>
+                <span>1x</span>
+                <span>@ $5.00</span>
+              </div>
+            </div>
+          </div>
+          <p>$5.00</p>
+        </li>
+
+        <li>
+          <div>
+            <img src="assets/images/image-cake-thumbnail.jpg" alt="">
+            <div>
+              <p>Red Velvet Cake</p>
+              <div>
+                <span>1x</span>
+                <span>@ $4.50</span>
+              </div>
+            </div>
+          </div>
+          <p>$4.50</p>
+        </li>
+
+        <li>
+          <div>
+            <img src="assets/images/image-brownie-thumbnail.jpg" alt="">
+            <div>
+              <p>Salted Caramel Brownie</p>
+              <div>
+                <span>1x</span>
+                <span>@ $5.50</span>
+              </div>
+            </div>
+          </div>
+          <p>$5.50</p>
+        </li>
+
+        <li>
+          <div>
+            <img src="assets/images/image-panna-cotta-thumbnail.jpg" alt="">
+            <div>
+              <p>Vanilla Panna Cotta</p>
+              <div>
+                <span>1x</span>
+                <span>@ $6.50</span>
+              </div>
+            </div>
+          </div>
+          <p>$6.50</p>
+        </li>
+
+        <li>
+          <p>Order Total</p>
+          <p class="total-price">$00.00</p>
+        </li>
+
+      </ul>
+
+      <button class="start-new-order">Start New Order</button>
+    </div>
+  </div>
 
 </body>
 </html>
