Made the added dishes counter inside the parentheses functional

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
 
     <div class="your-cart">
-      <p>Your Cart (<span class="total-quantity">0</span>)</p>
+      <p>Your Cart (<span class="count">0</span>)</p>
       <div class="removed">
         <img class="cake-img" src="assets/images/illustration-empty-cart.svg" alt="">
         <p>Your added items will appear here</p>
